# notes_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  bot.py  config.py  handlers.py  notes.py  utils.py
src/features/: __init__.py  calendar_ops.py  rating.py  tasks.py
src/handlers/: __init__.py  callbacks.py  commands.py  messages.py
src/keyboards/: __init__.py  calendar.py  main_menu.py  tasks.py
src/states/: __init__.py  context.py  manager.py
